# Conversational-AI

./: .gitignore  README.md  pyproject.toml
backend/: chart_builder.py  database.py  main.py  models.py  nlp_to_sql.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: app.jsx  index.css
